# katzenwl

./: .gitignore  Doxyfile  LICENSE.md  README.md  meson.build  meson_options.txt
examples/: client.c  outputs.c  server.c
includes/: x11.h
includes/kwl-private/backend/: drm.h  xcb.h
includes/kwl-private/renderer/: software.h  xcb.h
includes/kwl-private/renderer/allocators/: allocator.h
includes/kwl-private/util/: macros.h
includes/kwl/backend/: backend.h
includes/kwl/interfaces/: kwl-buffer.h  kwl-output.h  kwl-seat.h
includes/kwl/renderer/allocators/: allocator.h
includes/log/: kwl-log.h
src/backend/: backend.c  drm.c  xcb.c
src/interfaces/: kwl-buffer.c  kwl-compositor.c  kwl-output.c  kwl-seat.c
src/log/: kwl-log.c
src/renderer/allocators/: allocator.c  shm.c
src/renderer/software/: renderer.c
src/renderer/x11/: xcb-render.c
